[project]
name = "pymqttframework"
version = "3.0.2"
description = "Simple application framework for MQTT based applications"
readme = "README.md"
authors = [
    { name = "Pauli Anttila", email = "pauli.anttila@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.11.2",
    "blinker==1.9.0",
    "cheroot==11.1.2",
    "click==8.3.1",
    "deprecated==1.3.1",
    "flask==3.1.2",
    "flask-limiter==4.1.1",
    "flask-mqtt==1.2.1",
    "importlib-resources==6.5.2",
    "itsdangerous==2.2.0",
    "jaraco-functools==4.4.0",
    "jinja2==3.1.6",
    "limits==5.6.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "ordered-set==4.1.0",
    "packaging==25.0",
    "paho-mqtt==1.6.1",
    "prometheus-client==0.23.1",
    "prometheus-flask-exporter==0.23.2",
    "pygments==2.19.2",
    "pytz==2025.2",
    "rich==13.9.4",
    "six==1.17.0",
    "typing-extensions==4.15.0",
    "tzlocal==5.3.1",
    "werkzeug==3.1.4",
    "wrapt==2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "dist", "build", "setup.py"]
skips = ["B104"]

[tool.uv]
python-preference = "system"

[tool.hatch.build.targets.sdist]
exclude = [
  ".github/",
  "run_integration_tests.sh",
  "tests/",
]
